[project]
name = "arxiv-ai-agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chukwuma Mabi", email = "mabichukwuma@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
