[project]
name = "arxiv-ai-agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chukwuma Mabi", email = "mabichukwuma@gmail.com"},
]
dependencies = ["arxiv>=2.2.0", "llama-index>=0.12.43", "python-dotenv>=1.1.0", "notebook>=7.4.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
